# Shop-Service

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: cicd.yml
alembic/: env.py
alembic/versions/: 01fcf6d82e74_create_shop_table.py  9cfe0466e5b0_added_new_columns_to_shop_table.py
app/: main.py
app/constants/: messages.py
app/controllers/: shop_controller.py
app/core/: config.py  database.py
app/grpc/: clients.py  handlers.py  server.py
app/models/: shop_model.py
app/routes/: shop_routes.py
app/schemas/: shop_schemas.py
app/services/: shop_service.py
k8s/: deployment.dev.yaml  deployment.yaml  ingress.dev.yaml  ingress.yaml  secret.example.yaml  service.yaml
product/: product_pb2.py  product_pb2_grpc.py
shop/: shop_pb2.py  shop_pb2_grpc.py
